--- a/Prevu.Localization/Properties/Resources.ar.resx
+++ b/Prevu.Localization/Properties/Resources.ar.resx
@@ -10362,4 +10362,37 @@
   <data name="M_INFO_SAFETY_BARRIERS" xml:space="preserve">
     <value>استعادة حواجز السلامة للإنتاج</value>
   </data>
+  <data name="MONDAY" xml:space="preserve">
+    <value>الاثنين</value>
+  </data>
+  <data name="TUESDAY" xml:space="preserve">
+    <value>يوم الثلاثاء</value>
+  </data>
+  <data name="WEDNESDAY" xml:space="preserve">
+    <value>الأربعاء</value>
+  </data>
+  <data name="THURSDAY" xml:space="preserve">
+    <value>يوم الخميس</value>
+  </data>
+  <data name="FRIDAY" xml:space="preserve">
+    <value>جمعة</value>
+  </data>
+  <data name="SATURDAY" xml:space="preserve">
+    <value>السبت</value>
+  </data>
+  <data name="SUNDAY" xml:space="preserve">
+    <value>الأحد</value>
+  </data>
+  <data name="REPORT TIME" xml:space="preserve">
+    <value>وقت التقرير</value>
+  </data>
+  <data name="NUMBER OF HOURS" xml:space="preserve">
+    <value>عدد الساعات</value>
+  </data>
+  <data name="NUMBER OF DAYS" xml:space="preserve">
+    <value>عدد الأيام</value>
+  </data>
+  <data name="REPORT DAY" xml:space="preserve">
+    <value>يوم التقرير</value>
+  </data>
 </root>
