--- a/Prevu.Localization/Properties/Resources.fr.resx
+++ b/Prevu.Localization/Properties/Resources.fr.resx
@@ -10362,4 +10362,37 @@
   <data name="M_INFO_SAFETY_BARRIERS" xml:space="preserve">
     <value>Restaurer les barrières de sécurité pour la production</value>
   </data>
+  <data name="MONDAY" xml:space="preserve">
+    <value>Lundi</value>
+  </data>
+  <data name="TUESDAY" xml:space="preserve">
+    <value>Mardi</value>
+  </data>
+  <data name="WEDNESDAY" xml:space="preserve">
+    <value>Mercredi</value>
+  </data>
+  <data name="THURSDAY" xml:space="preserve">
+    <value>Jeudi</value>
+  </data>
+  <data name="FRIDAY" xml:space="preserve">
+    <value>Vendredi</value>
+  </data>
+  <data name="SATURDAY" xml:space="preserve">
+    <value>Samedi</value>
+  </data>
+  <data name="SUNDAY" xml:space="preserve">
+    <value>Dimanche</value>
+  </data>
+  <data name="REPORT TIME" xml:space="preserve">
+    <value>Heure du rapport</value>
+  </data>
+  <data name="NUMBER OF HOURS" xml:space="preserve">
+    <value>Nombre d'heures</value>
+  </data>
+  <data name="NUMBER OF DAYS" xml:space="preserve">
+    <value>Nombre de jours</value>
+  </data>
+  <data name="REPORT DAY" xml:space="preserve">
+    <value>Jour du rapport</value>
+  </data>
 </root>
