--- a/Prevu.Localization/Properties/Resources.he.resx
+++ b/Prevu.Localization/Properties/Resources.he.resx
@@ -10362,4 +10362,37 @@
   <data name="M_INFO_SAFETY_BARRIERS" xml:space="preserve">
     <value>שחזור מחסומי בטיחות לייצור</value>
   </data>
+  <data name="MONDAY" xml:space="preserve">
+    <value>יוֹם שֵׁנִי</value>
+  </data>
+  <data name="TUESDAY" xml:space="preserve">
+    <value>יוֹם שְׁלִישִׁי</value>
+  </data>
+  <data name="WEDNESDAY" xml:space="preserve">
+    <value>יוֹם רְבִיעִי</value>
+  </data>
+  <data name="THURSDAY" xml:space="preserve">
+    <value>יוֹם חֲמִישִׁי</value>
+  </data>
+  <data name="FRIDAY" xml:space="preserve">
+    <value>יוֹם שִׁישִׁי</value>
+  </data>
+  <data name="SATURDAY" xml:space="preserve">
+    <value>שַׁבָּת</value>
+  </data>
+  <data name="SUNDAY" xml:space="preserve">
+    <value>יוֹם רִאשׁוֹן</value>
+  </data>
+  <data name="REPORT TIME" xml:space="preserve">
+    <value>זמן דיווח</value>
+  </data>
+  <data name="NUMBER OF HOURS" xml:space="preserve">
+    <value>מספר שעות</value>
+  </data>
+  <data name="NUMBER OF DAYS" xml:space="preserve">
+    <value>מספר ימים</value>
+  </data>
+  <data name="REPORT DAY" xml:space="preserve">
+    <value>יום דיווח</value>
+  </data>
 </root>
