--- a/Prevu.Localization/Properties/Resources.it.resx
+++ b/Prevu.Localization/Properties/Resources.it.resx
@@ -2581,7 +2581,7 @@
     <value>Velocità Di Produzione - Avanzamento</value>
   </data>
   <data name="ENABLE" xml:space="preserve">
-    <value>Abilitare</value>
+    <value>Abilita</value>
   </data>
   <data name="SWIPE ACCESS CARD TO UNLOCK" xml:space="preserve">
     <value>Passa La Carta Di Accesso Per Sbloccare</value>
@@ -10361,5 +10361,38 @@
   </data>
   <data name="M_INFO_SAFETY_BARRIERS" xml:space="preserve">
     <value>De beste manier om dit te doen</value>
+  </data>
+  <data name="MONDAY" xml:space="preserve">
+    <value>Lunedi</value>
+  </data>
+  <data name="TUESDAY" xml:space="preserve">
+    <value>Martedì</value>
+  </data>
+  <data name="WEDNESDAY" xml:space="preserve">
+    <value>Mercoledì</value>
+  </data>
+  <data name="THURSDAY" xml:space="preserve">
+    <value>Giovedì</value>
+  </data>
+  <data name="FRIDAY" xml:space="preserve">
+    <value>Venerdì</value>
+  </data>
+  <data name="SATURDAY" xml:space="preserve">
+    <value>Sabato</value>
+  </data>
+  <data name="SUNDAY" xml:space="preserve">
+    <value>Domenica</value>
+  </data>
+  <data name="REPORT TIME" xml:space="preserve">
+    <value>Tempo del rapporto</value>
+  </data>
+  <data name="NUMBER OF HOURS" xml:space="preserve">
+    <value>Numero di ore</value>
+  </data>
+  <data name="NUMBER OF DAYS" xml:space="preserve">
+    <value>Numero di giorni</value>
+  </data>
+  <data name="REPORT DAY" xml:space="preserve">
+    <value>Giornata del rapporto</value>
   </data>
 </root>
