--- a/Prevu.Localization/Properties/Resources.nl.resx
+++ b/Prevu.Localization/Properties/Resources.nl.resx
@@ -10362,4 +10362,37 @@
   <data name="M_INFO_SAFETY_BARRIERS" xml:space="preserve">
     <value>Ripristinare le barriere di sicurezza per la produzione</value>
   </data>
+  <data name="MONDAY" xml:space="preserve">
+    <value>Maandag</value>
+  </data>
+  <data name="TUESDAY" xml:space="preserve">
+    <value>Dinsdag</value>
+  </data>
+  <data name="WEDNESDAY" xml:space="preserve">
+    <value>Woensdag</value>
+  </data>
+  <data name="THURSDAY" xml:space="preserve">
+    <value>Donderdag</value>
+  </data>
+  <data name="FRIDAY" xml:space="preserve">
+    <value>Vrijdag</value>
+  </data>
+  <data name="SATURDAY" xml:space="preserve">
+    <value>Zaterdag</value>
+  </data>
+  <data name="SUNDAY" xml:space="preserve">
+    <value>Zondag</value>
+  </data>
+  <data name="REPORT TIME" xml:space="preserve">
+    <value>Rapporteer tijd</value>
+  </data>
+  <data name="NUMBER OF HOURS" xml:space="preserve">
+    <value>Aantal uren</value>
+  </data>
+  <data name="NUMBER OF DAYS" xml:space="preserve">
+    <value>Aantal dagen</value>
+  </data>
+  <data name="REPORT DAY" xml:space="preserve">
+    <value>Verslagdag</value>
+  </data>
 </root>
