--- a/Prevu.Localization/Properties/Resources.pt.resx
+++ b/Prevu.Localization/Properties/Resources.pt.resx
@@ -10362,4 +10362,37 @@
   <data name="M_INFO_SAFETY_BARRIERS" xml:space="preserve">
     <value>Restaurar barreiras de segurança para produção</value>
   </data>
+  <data name="MONDAY" xml:space="preserve">
+    <value>Segunda-feira</value>
+  </data>
+  <data name="TUESDAY" xml:space="preserve">
+    <value>Terça-feira</value>
+  </data>
+  <data name="WEDNESDAY" xml:space="preserve">
+    <value>Quarta-feira</value>
+  </data>
+  <data name="THURSDAY" xml:space="preserve">
+    <value>Quinta-feira</value>
+  </data>
+  <data name="FRIDAY" xml:space="preserve">
+    <value>Sexta-feira</value>
+  </data>
+  <data name="SATURDAY" xml:space="preserve">
+    <value>Sábado</value>
+  </data>
+  <data name="SUNDAY" xml:space="preserve">
+    <value>Domingo</value>
+  </data>
+  <data name="REPORT TIME" xml:space="preserve">
+    <value>Hora do relatório</value>
+  </data>
+  <data name="NUMBER OF HOURS" xml:space="preserve">
+    <value>Número de horas</value>
+  </data>
+  <data name="NUMBER OF DAYS" xml:space="preserve">
+    <value>Número de dias</value>
+  </data>
+  <data name="REPORT DAY" xml:space="preserve">
+    <value>Dia do relatório</value>
+  </data>
 </root>
