--- a/Prevu.Localization/Properties/Resources.resx
+++ b/Prevu.Localization/Properties/Resources.resx
@@ -8567,7 +8567,7 @@
     <value>Semi-Auto Mode In Progress</value>
   </data>
   <data name="DIVERTER ENABLED " xml:space="preserve">
-    <value>Diverter Enabled </value>
+    <value>Diverter Enabled</value>
   </data>
   <data name="DIVERTER DISABLED" xml:space="preserve">
     <value>Diverter Disabled</value>
@@ -10732,5 +10732,38 @@
   <data name="M_INFO_SAFETY_BARRIERS" xml:space="preserve">
     <value>Restore Safety Barriers For Production</value>
     <comment>InfoText Message</comment>
+  </data>
+  <data name="MONDAY" xml:space="preserve">
+    <value>Monday</value>
+  </data>
+  <data name="TUESDAY" xml:space="preserve">
+    <value>Tuesday</value>
+  </data>
+  <data name="WEDNESDAY" xml:space="preserve">
+    <value>Wednesday</value>
+  </data>
+  <data name="THURSDAY" xml:space="preserve">
+    <value>Thursday</value>
+  </data>
+  <data name="FRIDAY" xml:space="preserve">
+    <value>Friday</value>
+  </data>
+  <data name="SATURDAY" xml:space="preserve">
+    <value>Saturday</value>
+  </data>
+  <data name="SUNDAY" xml:space="preserve">
+    <value>Sunday</value>
+  </data>
+  <data name="REPORT TIME" xml:space="preserve">
+    <value>Report Time</value>
+  </data>
+  <data name="NUMBER OF HOURS" xml:space="preserve">
+    <value>Number Of Hours</value>
+  </data>
+  <data name="NUMBER OF DAYS" xml:space="preserve">
+    <value>Number Of Days</value>
+  </data>
+  <data name="REPORT DAY" xml:space="preserve">
+    <value>Report Day</value>
   </data>
 </root>
