--- a/Prevu.Localization/Properties/Resources.ro.resx
+++ b/Prevu.Localization/Properties/Resources.ro.resx
@@ -10362,4 +10362,37 @@
   <data name="M_INFO_SAFETY_BARRIERS" xml:space="preserve">
     <value>Restaurați barierele de siguranță pentru producție</value>
   </data>
+  <data name="MONDAY" xml:space="preserve">
+    <value>luni</value>
+  </data>
+  <data name="TUESDAY" xml:space="preserve">
+    <value>marţi</value>
+  </data>
+  <data name="WEDNESDAY" xml:space="preserve">
+    <value>miercuri</value>
+  </data>
+  <data name="THURSDAY" xml:space="preserve">
+    <value>joi</value>
+  </data>
+  <data name="FRIDAY" xml:space="preserve">
+    <value>vineri</value>
+  </data>
+  <data name="SATURDAY" xml:space="preserve">
+    <value>sâmbătă</value>
+  </data>
+  <data name="SUNDAY" xml:space="preserve">
+    <value>duminică</value>
+  </data>
+  <data name="REPORT TIME" xml:space="preserve">
+    <value>Ora raportului</value>
+  </data>
+  <data name="NUMBER OF HOURS" xml:space="preserve">
+    <value>Numărul de ore</value>
+  </data>
+  <data name="NUMBER OF DAYS" xml:space="preserve">
+    <value>Numărul de zile</value>
+  </data>
+  <data name="REPORT DAY" xml:space="preserve">
+    <value>Ziua Raportului</value>
+  </data>
 </root>
