--- a/Prevu.Localization/Properties/Resources.de.resx
+++ b/Prevu.Localization/Properties/Resources.de.resx
@@ -10362,4 +10362,37 @@
   <data name="M_INFO_SAFETY_BARRIERS" xml:space="preserve">
     <value>Wiederherstellung der Sicherheitsbarrieren für die Produktion</value>
   </data>
+  <data name="MONDAY" xml:space="preserve">
+    <value>Montag</value>
+  </data>
+  <data name="TUESDAY" xml:space="preserve">
+    <value>Dienstag</value>
+  </data>
+  <data name="WEDNESDAY" xml:space="preserve">
+    <value>Mittwoch</value>
+  </data>
+  <data name="THURSDAY" xml:space="preserve">
+    <value>Donnerstag</value>
+  </data>
+  <data name="FRIDAY" xml:space="preserve">
+    <value>Freitag</value>
+  </data>
+  <data name="SATURDAY" xml:space="preserve">
+    <value>Samstag</value>
+  </data>
+  <data name="SUNDAY" xml:space="preserve">
+    <value>Sonntag</value>
+  </data>
+  <data name="REPORT TIME" xml:space="preserve">
+    <value>Berichtszeit</value>
+  </data>
+  <data name="NUMBER OF HOURS" xml:space="preserve">
+    <value>Anzahl der Stunden</value>
+  </data>
+  <data name="NUMBER OF DAYS" xml:space="preserve">
+    <value>Anzahl der Tage</value>
+  </data>
+  <data name="REPORT DAY" xml:space="preserve">
+    <value>Berichtstag</value>
+  </data>
 </root>
