--- a/Prevu.Localization/Properties/Resources.es.resx
+++ b/Prevu.Localization/Properties/Resources.es.resx
@@ -2581,7 +2581,7 @@
     <value>Velocidad De Producción: Avanzando</value>
   </data>
   <data name="ENABLE" xml:space="preserve">
-    <value>Habilitar</value>
+    <value>Habilita</value>
   </data>
   <data name="SWIPE ACCESS CARD TO UNLOCK" xml:space="preserve">
     <value>Pasa La Tarjeta De Acceso Para Desbloquear</value>
@@ -10361,5 +10361,38 @@
   </data>
   <data name="M_INFO_SAFETY_BARRIERS" xml:space="preserve">
     <value>Restaurar barreras de seguridad para la producción</value>
+  </data>
+  <data name="MONDAY" xml:space="preserve">
+    <value>Lunes</value>
+  </data>
+  <data name="TUESDAY" xml:space="preserve">
+    <value>Martes</value>
+  </data>
+  <data name="WEDNESDAY" xml:space="preserve">
+    <value>Miércoles</value>
+  </data>
+  <data name="THURSDAY" xml:space="preserve">
+    <value>Jueves</value>
+  </data>
+  <data name="FRIDAY" xml:space="preserve">
+    <value>Viernes</value>
+  </data>
+  <data name="SATURDAY" xml:space="preserve">
+    <value>Sábado</value>
+  </data>
+  <data name="SUNDAY" xml:space="preserve">
+    <value>Domingo</value>
+  </data>
+  <data name="REPORT TIME" xml:space="preserve">
+    <value>Hora del informe</value>
+  </data>
+  <data name="NUMBER OF HOURS" xml:space="preserve">
+    <value>Número de horas</value>
+  </data>
+  <data name="NUMBER OF DAYS" xml:space="preserve">
+    <value>Número de días</value>
+  </data>
+  <data name="REPORT DAY" xml:space="preserve">
+    <value>Día del informe</value>
   </data>
 </root>
