--- a/Prevu.Localization/Properties/Resources.sl.resx
+++ b/Prevu.Localization/Properties/Resources.sl.resx
@@ -10362,4 +10362,37 @@
   <data name="M_INFO_SAFETY_BARRIERS" xml:space="preserve">
     <value>Obnovite varnostne ovire za proizvodnjo</value>
   </data>
+  <data name="MONDAY" xml:space="preserve">
+    <value>ponedeljek</value>
+  </data>
+  <data name="TUESDAY" xml:space="preserve">
+    <value>torek</value>
+  </data>
+  <data name="WEDNESDAY" xml:space="preserve">
+    <value>sreda</value>
+  </data>
+  <data name="THURSDAY" xml:space="preserve">
+    <value>četrtek</value>
+  </data>
+  <data name="FRIDAY" xml:space="preserve">
+    <value>Petek</value>
+  </data>
+  <data name="SATURDAY" xml:space="preserve">
+    <value>sobota</value>
+  </data>
+  <data name="SUNDAY" xml:space="preserve">
+    <value>nedelja</value>
+  </data>
+  <data name="REPORT TIME" xml:space="preserve">
+    <value>Čas poročanja</value>
+  </data>
+  <data name="NUMBER OF HOURS" xml:space="preserve">
+    <value>Število ur</value>
+  </data>
+  <data name="NUMBER OF DAYS" xml:space="preserve">
+    <value>Število dni</value>
+  </data>
+  <data name="REPORT DAY" xml:space="preserve">
+    <value>Dan poročila</value>
+  </data>
 </root>
