--- a/Prevu.Localization/Properties/Resources.zh.resx
+++ b/Prevu.Localization/Properties/Resources.zh.resx
@@ -10362,4 +10362,37 @@
   <data name="M_INFO_SAFETY_BARRIERS" xml:space="preserve">
     <value>恢复生产安全屏障</value>
   </data>
+  <data name="MONDAY" xml:space="preserve">
+    <value>周一</value>
+  </data>
+  <data name="TUESDAY" xml:space="preserve">
+    <value>周二</value>
+  </data>
+  <data name="WEDNESDAY" xml:space="preserve">
+    <value>周三</value>
+  </data>
+  <data name="THURSDAY" xml:space="preserve">
+    <value>周四</value>
+  </data>
+  <data name="FRIDAY" xml:space="preserve">
+    <value>星期五</value>
+  </data>
+  <data name="SATURDAY" xml:space="preserve">
+    <value>周六</value>
+  </data>
+  <data name="SUNDAY" xml:space="preserve">
+    <value>星期日</value>
+  </data>
+  <data name="REPORT TIME" xml:space="preserve">
+    <value>报告时间</value>
+  </data>
+  <data name="NUMBER OF HOURS" xml:space="preserve">
+    <value>小时数</value>
+  </data>
+  <data name="NUMBER OF DAYS" xml:space="preserve">
+    <value>天数</value>
+  </data>
+  <data name="REPORT DAY" xml:space="preserve">
+    <value>报告日</value>
+  </data>
 </root>
