Update Info texts

--- a/Prevu.Localization/Properties/Resources.ar.resx
+++ b/Prevu.Localization/Properties/Resources.ar.resx
@@ -4870,7 +4870,7 @@
     <value>تحقق من المرشح اضغط على عرض HMI لمعرفة سبب توقف المواد</value>
   </data>
   <data name="M_INFO_FILTER_PRESS_4" xml:space="preserve">
-    <value>تحقق من مرشح اضغط للحصول على مادة محتملة مسدودة</value>
+    <value>تحقق من الضغط على الفلتر بحثًا عن انسداد مادي محتمل</value>
   </data>
   <data name="M_INFO_FILTER_PRESS_5" xml:space="preserve">
     <value>الفكين مفتوحة لمنع ذوبان المواد</value>
@@ -10394,5 +10394,20 @@
   </data>
   <data name="REPORT DAY" xml:space="preserve">
     <value>يوم التقرير</value>
+  </data>
+  <data name="INFO_PRES_14" xml:space="preserve">
+    <value>تحقق من وجود أي عوائق أو تسربات في الأنابيب و/أو في الفلتر</value>
+  </data>
+  <data name="INFO_USAGE_1" xml:space="preserve">
+    <value>الكثير من المياه في الاستخدام! تحقق من الإعدادات ذات الصلة وسبب هذا الاستخدام غير الطبيعي</value>
+  </data>
+  <data name="INFO_BIMANUAL_1" xml:space="preserve">
+    <value>يجب تمكين التحكم اليدوي الثنائي المحلي أولاً! استخدم لوحة HMI للقيام بذلك. يؤدي هذا إلى انتهاء الصلاحية بعد وقت الصيانة المبرمج</value>
+  </data>
+  <data name="INFO_HRADWARE_1" xml:space="preserve">
+    <value>فحص الجهاز وتوصيلاته الكهربائية وأسلاكه</value>
+  </data>
+  <data name="INFO_LEVEL_20" xml:space="preserve">
+    <value>تحقق من وقت تشغيل وإيقاف محرض الصومعة حيث يتم تجميد القياس أثناء تشغيل المحرض.</value>
   </data>
 </root>
