--- a/Prevu.Localization/Properties/Resources.de.resx
+++ b/Prevu.Localization/Properties/Resources.de.resx
@@ -4870,7 +4870,7 @@
     <value>Überprüfen Sie den Filter Drücken Sie die HMI -Ansicht, um die Ursache des Materialstopps zu sehen</value>
   </data>
   <data name="M_INFO_FILTER_PRESS_4" xml:space="preserve">
-    <value>Überprüfen Sie den Filterdruck auf ein mögliches Material, das verstopft ist</value>
+    <value>Überprüfen Sie die Filterpresse auf mögliche Materialverstopfungen</value>
   </data>
   <data name="M_INFO_FILTER_PRESS_5" xml:space="preserve">
     <value>Kiefer öffnen sich, um das Schmelzen von Material zu verhindern</value>
@@ -10394,5 +10394,20 @@
   </data>
   <data name="REPORT DAY" xml:space="preserve">
     <value>Berichtstag</value>
+  </data>
+  <data name="INFO_PRES_14" xml:space="preserve">
+    <value>Überprüfen Sie den Abstrom auf Verstopfungen oder Undichtigkeiten in den Rohrleitungen und/oder im Filter</value>
+  </data>
+  <data name="INFO_USAGE_1" xml:space="preserve">
+    <value>Zu viel Wasser im Einsatz! Überprüfen Sie die zugehörigen Einstellungen und den Grund für diese abnormale Nutzung</value>
+  </data>
+  <data name="INFO_BIMANUAL_1" xml:space="preserve">
+    <value>Die lokale bimanuelle Steuerung muss zuerst aktiviert werden! Verwenden Sie dazu das HMI-Panel. Diese Freigabe erlischt nach der programmierten Wartungszeit</value>
+  </data>
+  <data name="INFO_HRADWARE_1" xml:space="preserve">
+    <value>Überprüfen Sie das Gerät, seine elektrischen Anschlüsse und die Verkabelung</value>
+  </data>
+  <data name="INFO_LEVEL_20" xml:space="preserve">
+    <value>Überprüfen Sie die Ein- und Ausschaltzeit des Silo-Rührwerks, da der Messwert während des Rührwerks eingefroren ist.</value>
   </data>
 </root>
