--- a/Prevu.Localization/Properties/Resources.es.resx
+++ b/Prevu.Localization/Properties/Resources.es.resx
@@ -4870,7 +4870,7 @@
     <value>Verifique El Filtro Presione En La Vista Hmi Para Ver La Causa De La Parada Del Material</value>
   </data>
   <data name="M_INFO_FILTER_PRESS_4" xml:space="preserve">
-    <value>Verifique la presión del filtro para obtener un posible material obstruido</value>
+    <value>Revise el filtro prensa para detectar una posible obstrucción de material</value>
   </data>
   <data name="M_INFO_FILTER_PRESS_5" xml:space="preserve">
     <value>Jaws Abiertas Para Evitar Que El Material Se Derrita</value>
@@ -10394,5 +10394,20 @@
   </data>
   <data name="REPORT DAY" xml:space="preserve">
     <value>Día del informe</value>
+  </data>
+  <data name="INFO_PRES_14" xml:space="preserve">
+    <value>Verifique aguas abajo en busca de obstrucciones o fugas en las tuberías y/o en el filtro</value>
+  </data>
+  <data name="INFO_USAGE_1" xml:space="preserve">
+    <value>¡Se usa demasiada agua! Verifique las configuraciones relacionadas y el motivo de este uso anormal</value>
+  </data>
+  <data name="INFO_BIMANUAL_1" xml:space="preserve">
+    <value>¡Primero se debe habilitar el control bimanual local! Utilice el panel HMI para hacerlo. Esta habilitación vence después del tiempo de mantenimiento programado</value>
+  </data>
+  <data name="INFO_HRADWARE_1" xml:space="preserve">
+    <value>Verifique el dispositivo, sus conexiones eléctricas y cableado</value>
+  </data>
+  <data name="INFO_LEVEL_20" xml:space="preserve">
+    <value>Verifique el tiempo de ENCENDIDO y APAGADO del agitador del silo ya que la medida se congela durante el funcionamiento del agitador.</value>
   </data>
 </root>
