--- a/Prevu.Localization/Properties/Resources.fr.resx
+++ b/Prevu.Localization/Properties/Resources.fr.resx
@@ -4873,7 +4873,7 @@
     <value>Vérifiez le filtre-presse sur la vue HMI pour connaître la cause de l'arrêt du matériau.</value>
   </data>
   <data name="M_INFO_FILTER_PRESS_4" xml:space="preserve">
-    <value>Vérifiez le filtre-presse pour déceler un éventuel matériau obstrué.</value>
+    <value>Vérifiez le filtre-presse pour déceler un éventuel colmatage du matériau.</value>
   </data>
   <data name="M_INFO_FILTER_PRESS_5" xml:space="preserve">
     <value>Mâchoires ouvertes pour empêcher la fonte du matériau</value>
@@ -10394,5 +10394,20 @@
   </data>
   <data name="REPORT DAY" xml:space="preserve">
     <value>Jour du rapport</value>
+  </data>
+  <data name="INFO_PRES_14" xml:space="preserve">
+    <value>Vérifiez en aval les obstructions ou les fuites dans la tuyauterie et/ou dans le filtre</value>
+  </data>
+  <data name="INFO_USAGE_1" xml:space="preserve">
+    <value>Trop d'eau utilisée ! Vérifiez les configurations associées et la raison de cette utilisation anormale</value>
+  </data>
+  <data name="INFO_BIMANUAL_1" xml:space="preserve">
+    <value>Le contrôle bimanuel local doit d'abord être activé ! Utilisez le panneau HMI pour le faire. Cette activation expire après le temps de maintenance programmé</value>
+  </data>
+  <data name="INFO_HRADWARE_1" xml:space="preserve">
+    <value>Vérifiez l'appareil, ses connexions électriques et son câblage</value>
+  </data>
+  <data name="INFO_LEVEL_20" xml:space="preserve">
+    <value>Vérifiez l'heure de marche et d'arrêt de l'agitateur de silo puisque la mesure est gelée pendant le fonctionnement de l'agitateur.</value>
   </data>
 </root>
