--- a/Prevu.Localization/Properties/Resources.he.resx
+++ b/Prevu.Localization/Properties/Resources.he.resx
@@ -4873,7 +4873,7 @@
     <value>בדוק את לחץ על סנן בתצוגת HMI כדי לראות את הגורם לעצור חומר</value>
   </data>
   <data name="M_INFO_FILTER_PRESS_4" xml:space="preserve">
-    <value>בדוק את Printer לחץ על חומר אפשרי סתום</value>
+    <value>בדוק את הקש מסנן עבור סתימת חומר אפשרית</value>
   </data>
   <data name="M_INFO_FILTER_PRESS_5" xml:space="preserve">
     <value>לסתות פתוחות למניעת נמס חומרים</value>
@@ -10394,5 +10394,20 @@
   </data>
   <data name="REPORT DAY" xml:space="preserve">
     <value>יום דיווח</value>
+  </data>
+  <data name="INFO_PRES_14" xml:space="preserve">
+    <value>בדוק במורד הזרם אם יש חסימות או דליפות בצנרת ו/או במסנן</value>
+  </data>
+  <data name="INFO_USAGE_1" xml:space="preserve">
+    <value>יותר מדי מים בשימוש! בדוק את ההגדרות הקשורות ואת הסיבה לשימוש חריג זה</value>
+  </data>
+  <data name="INFO_BIMANUAL_1" xml:space="preserve">
+    <value>תחילה יש להפעיל שליטה דו-מנואלית מקומית! השתמש בלוח HMI כדי לעשות זאת. הפעלה זו פג לאחר זמן תחזוקה מתוכנת</value>
+  </data>
+  <data name="INFO_HRADWARE_1" xml:space="preserve">
+    <value>בדוק את המכשיר, חיבוריו החשמליים והחיווט שלו</value>
+  </data>
+  <data name="INFO_LEVEL_20" xml:space="preserve">
+    <value>סמן את זמן ההפעלה והכיבוי של מעבד הסילו מכיוון שהמידה קפואה במהלך הפעלת המערבל.</value>
   </data>
 </root>
