--- a/Prevu.Localization/Properties/Resources.it.resx
+++ b/Prevu.Localization/Properties/Resources.it.resx
@@ -4873,7 +4873,7 @@
     <value>Controllare il filtro Premere su HMI View per vedere la causa del materiale</value>
   </data>
   <data name="M_INFO_FILTER_PRESS_4" xml:space="preserve">
-    <value>Controllare la pressione del filtro per un possibile materiale intasato</value>
+    <value>Controllare la filtropressa per un possibile intasamento del materiale</value>
   </data>
   <data name="M_INFO_FILTER_PRESS_5" xml:space="preserve">
     <value>Le mascelle aperte per prevenire la fusione del materiale</value>
@@ -10394,5 +10394,20 @@
   </data>
   <data name="REPORT DAY" xml:space="preserve">
     <value>Giornata del rapporto</value>
+  </data>
+  <data name="INFO_PRES_14" xml:space="preserve">
+    <value>Controllare a valle per eventuali ostruzioni o perdite nelle tubazioni e/o nel filtro</value>
+  </data>
+  <data name="INFO_USAGE_1" xml:space="preserve">
+    <value>Troppa acqua in uso! Controllare le configurazioni correlate e il motivo di questo utilizzo anomalo</value>
+  </data>
+  <data name="INFO_BIMANUAL_1" xml:space="preserve">
+    <value>Il controllo bimanuale locale deve essere abilitato prima! Usa il pannello HMI per farlo. Questa abilitazione scade dopo il tempo di manutenzione programmato</value>
+  </data>
+  <data name="INFO_HRADWARE_1" xml:space="preserve">
+    <value>Controllare il dispositivo, i suoi collegamenti elettrici e il cablaggio</value>
+  </data>
+  <data name="INFO_LEVEL_20" xml:space="preserve">
+    <value>Controllare il tempo di accensione e spegnimento dell'agitatore del silo poiché la misura è congelata durante il funzionamento dell'agitatore.</value>
   </data>
 </root>
