--- a/Prevu.Localization/Properties/Resources.nl.resx
+++ b/Prevu.Localization/Properties/Resources.nl.resx
@@ -4873,7 +4873,7 @@
     <value>Filter controleren Druk op HMI View om de oorzaak van de materiaalstop te zien</value>
   </data>
   <data name="M_INFO_FILTER_PRESS_4" xml:space="preserve">
-    <value>Controleer de filterpers op mogelijk verstopt materiaal</value>
+    <value>Controleer de filterpers op een mogelijke materiaalverstopping</value>
   </data>
   <data name="M_INFO_FILTER_PRESS_5" xml:space="preserve">
     <value>Kaken open om materiaalsmelt te voorkomen</value>
@@ -10394,5 +10394,20 @@
   </data>
   <data name="REPORT DAY" xml:space="preserve">
     <value>Verslagdag</value>
+  </data>
+  <data name="INFO_PRES_14" xml:space="preserve">
+    <value>Controleer stroomafwaarts op obstructies of lekkages in de leidingen en/of in het filter</value>
+  </data>
+  <data name="INFO_USAGE_1" xml:space="preserve">
+    <value>Te veel water in gebruik! Controleer de gerelateerde instellingen en de reden van dit abnormale gebruik</value>
+  </data>
+  <data name="INFO_BIMANUAL_1" xml:space="preserve">
+    <value>Loacal bimanuele bediening moet eerst worden ingeschakeld! Gebruik het HMI-paneel om het te doen. Deze activering vervalt na de geprogrammeerde onderhoudstijd</value>
+  </data>
+  <data name="INFO_HRADWARE_1" xml:space="preserve">
+    <value>Controleer het apparaat, de elektrische aansluitingen en bedrading</value>
+  </data>
+  <data name="INFO_LEVEL_20" xml:space="preserve">
+    <value>Controleer de AAN- en UIT-tijd van het silo-roerwerk, aangezien de maateenheid vastloopt tijdens het draaien van het roerwerk.</value>
   </data>
 </root>
