--- a/Prevu.Localization/Properties/Resources.pt.resx
+++ b/Prevu.Localization/Properties/Resources.pt.resx
@@ -4873,7 +4873,7 @@
     <value>Verifique o filtro Pressione a visualização da HMI para ver a causa da parada do material</value>
   </data>
   <data name="M_INFO_FILTER_PRESS_4" xml:space="preserve">
-    <value>Filtro de verificação Pressione para um possível material entupido</value>
+    <value>Verifique o filtro prensa quanto a um possível entupimento de material</value>
   </data>
   <data name="M_INFO_FILTER_PRESS_5" xml:space="preserve">
     <value>JAWS ABERTO PARA PEVAR MATERIAL DELENTE</value>
@@ -10394,5 +10394,20 @@
   </data>
   <data name="REPORT DAY" xml:space="preserve">
     <value>Dia do relatório</value>
+  </data>
+  <data name="INFO_PRES_14" xml:space="preserve">
+    <value>Verifique a jusante se há obstruções ou vazamentos na tubulação e/ou no filtro</value>
+  </data>
+  <data name="INFO_USAGE_1" xml:space="preserve">
+    <value>Muita água em uso! Verifique as configurações relacionadas e o motivo desse uso anormal</value>
+  </data>
+  <data name="INFO_BIMANUAL_1" xml:space="preserve">
+    <value>O controle bimanual local deve ser ativado primeiro! Use o painel HMI para fazer isso. Esta ativação expira após o tempo de manutenção programado</value>
+  </data>
+  <data name="INFO_HRADWARE_1" xml:space="preserve">
+    <value>Verifique o dispositivo, suas conexões elétricas e fiação</value>
+  </data>
+  <data name="INFO_LEVEL_20" xml:space="preserve">
+    <value>Verifique o tempo de ativação e desativação do agitador do silo, pois a medida está congelada durante a operação do agitador.</value>
   </data>
 </root>
