--- a/Prevu.Localization/Properties/Resources.resx
+++ b/Prevu.Localization/Properties/Resources.resx
@@ -5186,7 +5186,7 @@
     <comment>InfoText Message</comment>
   </data>
   <data name="M_INFO_FILTER_PRESS_4" xml:space="preserve">
-    <value>Check Filter Press for a Possible Material Clogged</value>
+    <value>Check Filter Press for a Possible Material Clog</value>
     <comment>InfoText Message</comment>
   </data>
   <data name="M_INFO_FILTER_PRESS_5" xml:space="preserve">
@@ -10765,5 +10765,25 @@
   </data>
   <data name="REPORT DAY" xml:space="preserve">
     <value>Report Day</value>
+  </data>
+  <data name="INFO_PRES_14" xml:space="preserve">
+    <value>Check Downstream For Obstructions Or For Leakages In Piping And/Or In The Filter</value>
+    <comment>InfoText Fault</comment>
+  </data>
+  <data name="INFO_USAGE_1" xml:space="preserve">
+    <value>Too Much Water In Use ! Check The Related Setups And The Reason Of This Abnormal Usage</value>
+    <comment>InfoText Fault</comment>
+  </data>
+  <data name="INFO_BIMANUAL_1" xml:space="preserve">
+    <value>Loacal Bimanual Control Has To Be Enabled First! Use HMI Panel To Do It. This Enable Expires After Programmed Maintenance Time</value>
+    <comment>InfoText Fault</comment>
+  </data>
+  <data name="INFO_HRADWARE_1" xml:space="preserve">
+    <value>Check The Device, Its Electrical Connections and Wiring</value>
+    <comment>InfoText Fault</comment>
+  </data>
+  <data name="INFO_LEVEL_20" xml:space="preserve">
+    <value>Check ON And OFF Time Of The Silo Agitator Since Measure Is Frozen During Agitator Run.</value>
+    <comment>InfoText Fault</comment>
   </data>
 </root>
