--- a/Prevu.Localization/Properties/Resources.ro.resx
+++ b/Prevu.Localization/Properties/Resources.ro.resx
@@ -4873,7 +4873,7 @@
     <value>Verificați filtrul Apăsați pe HMI View pentru a vedea cauza opririi materialului</value>
   </data>
   <data name="M_INFO_FILTER_PRESS_4" xml:space="preserve">
-    <value>Verificați apăsați filtrul pentru un posibil material înfundat</value>
+    <value>Verificați filtrul-presă pentru un posibil înfundare a materialului</value>
   </data>
   <data name="M_INFO_FILTER_PRESS_5" xml:space="preserve">
     <value>Fălcile deschise pentru a preveni topirea materialului</value>
@@ -10394,5 +10394,20 @@
   </data>
   <data name="REPORT DAY" xml:space="preserve">
     <value>Ziua Raportului</value>
+  </data>
+  <data name="INFO_PRES_14" xml:space="preserve">
+    <value>Verificați în aval dacă există obstacole sau scurgeri în conducte și/sau în filtru</value>
+  </data>
+  <data name="INFO_USAGE_1" xml:space="preserve">
+    <value>Prea multă apă în uz! Verificați setările aferente și motivul acestei utilizări anormale</value>
+  </data>
+  <data name="INFO_BIMANUAL_1" xml:space="preserve">
+    <value>Controlul bimanual local trebuie mai întâi activat! Utilizați panoul HMI pentru a face acest lucru. Această activare expiră după timpul de întreținere programat</value>
+  </data>
+  <data name="INFO_HRADWARE_1" xml:space="preserve">
+    <value>Verificați dispozitivul, conexiunile electrice și cablarea acestuia</value>
+  </data>
+  <data name="INFO_LEVEL_20" xml:space="preserve">
+    <value>Verificați timpul de pornire și oprire a agitatorului silozului, deoarece măsura este înghețată în timpul funcționării agitatorului.</value>
   </data>
 </root>
