--- a/Prevu.Localization/Properties/Resources.sl.resx
+++ b/Prevu.Localization/Properties/Resources.sl.resx
@@ -10395,4 +10395,19 @@
   <data name="REPORT DAY" xml:space="preserve">
     <value>Dan poročila</value>
   </data>
+  <data name="INFO_PRES_14" xml:space="preserve">
+    <value>Preverite za ovire ali puščanja v ceveh in/ali filtru</value>
+  </data>
+  <data name="INFO_USAGE_1" xml:space="preserve">
+    <value>Preveč vode v uporabi! Preverite povezane nastavitve in razlog za to neobičajno uporabo</value>
+  </data>
+  <data name="INFO_BIMANUAL_1" xml:space="preserve">
+    <value>Najprej mora biti omogočen lokalni bimanualni nadzor! Za to uporabite ploščo HMI. Ta možnost poteče po programiranem času vzdrževanja</value>
+  </data>
+  <data name="INFO_HRADWARE_1" xml:space="preserve">
+    <value>Preverite napravo, njene električne povezave in ožičenje</value>
+  </data>
+  <data name="INFO_LEVEL_20" xml:space="preserve">
+    <value>Preverite čas vklopa in izklopa mešala silosa, ker je meritev med delovanjem mešala zamrznjena.</value>
+  </data>
 </root>
