--- a/Prevu.Localization/Properties/Resources.zh.resx
+++ b/Prevu.Localization/Properties/Resources.zh.resx
@@ -4870,7 +4870,7 @@
     <value>在HMI视图上检查过滤器，以查看材料停止的原因</value>
   </data>
   <data name="M_INFO_FILTER_PRESS_4" xml:space="preserve">
-    <value>检查过滤器，以获取可能堵塞的材料</value>
+    <value>检查压滤机是否存在可能的材料堵塞</value>
   </data>
   <data name="M_INFO_FILTER_PRESS_5" xml:space="preserve">
     <value>下巴打开以防止材料融化</value>
@@ -10394,5 +10394,20 @@
   </data>
   <data name="REPORT DAY" xml:space="preserve">
     <value>报告日</value>
+  </data>
+  <data name="INFO_PRES_14" xml:space="preserve">
+    <value>检查下游管道和/或过滤器中是否有障碍物或泄漏</value>
+  </data>
+  <data name="INFO_USAGE_1" xml:space="preserve">
+    <value>用水过多！检查相关设置以及使用异常的原因</value>
+  </data>
+  <data name="INFO_BIMANUAL_1" xml:space="preserve">
+    <value>必须首先启用本地双手控制！使用 HMI 面板来做到这一点。此启用在编程维护时间后到期</value>
+  </data>
+  <data name="INFO_HRADWARE_1" xml:space="preserve">
+    <value>检查设备及其电气连接和接线</value>
+  </data>
+  <data name="INFO_LEVEL_20" xml:space="preserve">
+    <value>检查筒仓搅拌器的开启和关闭时间，因为搅拌器运行期间计量被冻结。</value>
   </data>
 </root>
